# JANUS

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
conf/environments/: cluster.env.example  cluster.yaml  local.env.example  local.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: architecture.md  strategy-patterns.md
src/janus/: main.py  schema_contracts.py
src/janus/checkpoints/: __init__.py  progress.py
src/janus/lineage/: __init__.py  models.py  store.py
src/janus/models/: __init__.py  contracts.py  source_config.py
src/janus/normalizers/: __init__.py
src/janus/quality/: __init__.py  validators.py
src/janus/registry/: loader.py
src/janus/runtime/: __init__.py  executor.py  materialize.py  spark_lifecycle.py
src/janus/scripts/: raw_to_bronze.py
src/janus/strategies/: common.py
src/janus/writers/: __init__.py  raw.py  spark.py
tests/integration/bronze_materializer/: test_bronze_materializer_equivalence.py
tests/integration/dados_abertos_catalog/: test_dados_abertos_catalog_integration.py
tests/integration/ibge/: test_ibge_integration.py
tests/integration/inep/: test_inep_integration.py
tests/integration/lazy_spark/: test_scoped_iceberg_rows_session.py
tests/integration/spark_lifecycle/: test_combined_iceberg_rows_lifecycle.py  test_execute_lifecycle_evidence.py
tests/integration/transparencia/: test_transparencia_integration.py
tests/unit/: test_environment_baseline.py  test_main_spark_lifecycle.py
(+42 files in other folders)
